@@ -4,6 +4,7 @@ Version 5.2.4 -
 - backported fix for lingering problem related to bug #37239.  If two columns had the same name but
   different case then an exception would be thrown.  
 - fixed stored procedure parameter parsing when used inside server explorer.  (bug #39252)
+- fixed time data type so that negative values are handled properly (bug #39275)
   
 Version 5.2.3 - 8/14/08
 - Increased the speed of MySqlDataReader.GetOrdinal dramatically by using a couple
